# arcane-forge-tauri

./: .env.example  .gitignore  angular.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  store.ts  utils.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-06-25-231531_initial_database/: down.sql  up.sql
src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: character_commands.rs  characters.rs  mod.rs  sync_commands.rs
src-tauri/src/db/: mod.rs  mongo.rs
src-tauri/src/dtos/: character_dtos.rs  item_dtos.rs  mod.rs
src-tauri/src/models/: character.rs  class.rs  feature.rs  item.rs  joins.rs  mod.rs  spell.rs  subclass.rs
src-tauri/src/repositories/: character_repository.rs  cloud_character_repository.rs  item_repository.rs  mod.rs
src-tauri/src/services/: character_service.rs  mod.rs  sync_service.rs
src-tauri/src/services/mappings/: character_mapper.rs  character_service.rs  item_mapper.rs  mod.rs  new_character.rs
src-tauri/src/traits/: repository.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/services/: character.service.ts  (+1 more)
src/components/: CharacterSummaryCard.tsx  Navbar.tsx
src/layouts/: PageLayout.tsx
src/pages/: CharacterSheet.tsx  CharactersList.tsx  Dashboard.tsx  EditCharacterPage.tsx
src/schemas/: characterSchema.ts
src/services/: character-service.ts  sync-service.ts
src/stores/: characterStore.ts  syncStore.ts
(+50 files in other folders)
